畅购/新增changgou_common_db 新增changgou_service_api 新增changgou_service 畅购/common/添加分页结果 添加结果 添加状态码 畅购/service/新增goods类 创建启动类 配置应用参数 畅购/service_api/新增brand类

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
     <modules>
         <module>changgou_eureka</module>
         <module>changgou_common</module>
+        <module>changgou_common_db</module>
+        <module>changgou_service_api</module>
+        <module>changgou_service</module>
     </modules>
     <packaging>pom</packaging>
 
