--- a/changgou_eureka/src/main/resources/application.yml
+++ b/changgou_eureka/src/main/resources/application.yml
@@ -5,4 +5,4 @@ eureka:
     fetch-registry: false
     register-with-eureka: false
     service-url:
-      defaultZone: http://127.0.0.1:${server.port}}/eureka/
+      defaultZone: http://127.0.0.1:${server.port}/eureka/
