--- a/changgou_service_api/changgou_service_goods_api/pom.xml
+++ b/changgou_service_api/changgou_service_goods_api/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>changgou_common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.20</version>
+        </dependency>
     </dependencies>
 </project>
